src/main/java/com/example/currencyexchangerate/currency_exchange_rate_spring/error/ResourceNotCorrectException.java
package com.example.currencyexchangerate.currency_exchange_rate_spring.error;

public class ResourceNotCorrectException extends Exception{
  public ResourceNotCorrectException(String message){
    super(message);
  }
}
